CREATED new endpoints to update center role and delete a user-center relation
