# Backend/routes/userCenterRelationRoutes.js
@@ -1,10 +1,16 @@
 // Backend/routes/userCenterRelationRoutes.js
 import { Router } from "express";
 import { verifyToken } from "../middlewares/authMiddleware.js";
-import { createUserCenterRelationController } from "../controllers/userCenterRelationController.js";
+import { requireCenterAdmin } from "../middlewares/centerAdminMiddleware.js";
+
+import { createUserCenterRelationController, updateUserCenterRelationController, deleteUserCenterRelationController } from "../controllers/userCenterRelationController.js";
 
 const router = Router();
 
-router.post("/", verifyToken, createUserCenterRelationController);
+router.post("/", verifyToken, requireCenterAdmin, createUserCenterRelationController);
+
+router.put("/", verifyToken, requireCenterAdmin, updateUserCenterRelationController);
+
+router.delete("/:UserEmail", verifyToken, requireCenterAdmin, deleteUserCenterRelationController);
 
 export default router;
